--- a/raw_pages/index.html
+++ b/raw_pages/index.html
@@ -84,7 +84,14 @@
 					其中,\(h\)是普朗克常量, \(m\)是质量.
 				</p>
 			</li>
-
+			
+			<li><h3>相对论性</h3>
+				<p>
+					$$ m = \frac{m_{0}}{\sqrt{1-\frac{v^2}{c^2}}}$$
+					其中,\(m_{0}\)是静止质量,c为光速,v为速度。质量随速度变化。 
+				</p>
+			</li>
+			
 			<li><h3>E.g.</h3>
 
 
