--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Bios</span>
 	<small>
     <li><strong>Southeast University (SEU)</strong><br>
 	Ph.D. in Cyber Science and Engineering, 2017 - 2022, Nanjing<br>
-    Advisor: <a href="https://cyber.seu.edu.cn/tj1/list.htm">Prof. Jun Tao</a>
+    Supervisor: <a href="https://cyber.seu.edu.cn/tj1/list.htm">Prof. Jun Tao</a>
 	</li>
 	<li><strong>Huawei Ltd.</strong><br>
 	Software Engineer, 2015 - 2016
