--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@ Bios</span>
 <p><span style="font-weight: bold; font-size: 18px;">Publications</span></p>
 <ul class="style5">
     <li>
+        <small><a>
+		[ICPADS'23]AoI-Sensitive Relay-Assisted Data Collection via Multi-UAV in the Large-Scale Disaster Area</a>, <br>
+        Zezhi Zeng, <strong>Yang Gao*</strong><br>
+        <em>IEEE International Conference on Parallel and Distributed Systems (ICPADS)</em>, 2023.(Accepted)
+		(Full, Acceptance rate: 19.44%)(CCF-C)
+        </small>
+    </li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/9637751">
 		[MASS'21]Analytical Optimal Solution of Selfish Node Detection with 2-hop Constraints in OppNets</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Zuyan Wang, Wenqiang Li, Guang Cheng<br>
@@ -159,7 +167,7 @@ Bios</span>
 		(Full, Acceptance rate: 28.3%)(CCF-C)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/9432478">
 		[TCSS'21]CEBD: Contact Evidence-driven Blackhole Detection based on Machine Learning in OppNets</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Zuyan Wang, Weice Sun, Guang Cheng<br>
@@ -167,14 +175,14 @@ Bios</span>
 		(CCF-C)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/9432478">
 		[IEEE Access'19]POF: Probability-Driven Opportunistic Forwarding for Bike-Sharing System</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Qian Fang, Zu-Yan Wang, Xiao-Yan Li, Feng Xue<br>
         <em>IEEE Access</em>, 2019.
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/8785028">
 		[ICME'19]User Profiling with Campus Wi-Fi Access Trace and Network Traffic</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Li Zeng, Xiaoming Fang, Qian Fang, Xiaoyan Li<br>
@@ -182,7 +190,7 @@ Bios</span>
 		(CCF-B)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/8465163">
 		[CSCWD'18]Collaborative Route Plan for Parking Sites Selection in Bike-Sharing Systems</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Haotian Wu, Noah Kwaku Baah<br>
@@ -190,7 +198,7 @@ Bios</span>
 		(CCF-C)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://dl.acm.org/doi/10.1145/3579093">
 		[TOSN'23]Towards the Minimal Wait for Delay for Rechargeable WSNs with Multiple Mobile Chargers</a>, <br>
         Zuyan Wang, Jun Tao*, Yifan Xu, <strong>Yang Gao</strong>, Dikai Zou<br>
@@ -198,7 +206,7 @@ Bios</span>
 		(CCF-B)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://www.sciencedirect.com/science/article/pii/S1389128622000627">
 		[CN'22]Joint flight scheduling and task allocation for secure data collection in UAV-aided IoTs</a>, <br>
         Zuyan Wang, Jun Tao*, <strong>Yang Gao</strong>, Yifan Xu, Weice Sun, Yu Gao, Wenqiang Li<br>
@@ -206,7 +214,7 @@ Bios</span>
 		(CCF-B)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://ieeexplore.ieee.org/document/9781112">
 		[HPCC'21]Network Latency Estimation: A Tensor-Based Weighted Singular Value Thresholding Method</a>, <br>
         Weice Sun, Jun Tao*, Yifan Xu, <strong>Yang Gao</strong>, Zuyan Wang<br>
@@ -214,7 +222,7 @@ Bios</span>
 		(CCF-C)
         </small>
     </li>
-	<li>
+    <li>
         <small><a href="https://link.springer.com/article/10.1007/s12083-020-01006-0">
 		[PPNA'21]A Precision Adjustable Trajectory Planning Scheme for UAV-based Data Collection in IoTs</a>, <br>
         Zuyan Wang, Jun Tao*, <strong>Yang Gao</strong>, Yifan Xu, Weice Sun, Xiaoyan Li<br>
@@ -253,7 +261,7 @@ Bios</span>
 	<li>
         <small>Master Students</small>
         <ul> 
-			<li>
+            <li>
                 <small><a>Zezhi Zeng, 2nd year</a> </small>
             </li>
             <li>
@@ -262,13 +270,16 @@ Bios</span>
             <li>
                 <small><a>Zhengwu Yang, 1st year</a></small>
             </li>
+   	    <li>
+                <small><a>Qingqun Liang, 1st year</a></small>
+            </li>
         </ul>
     </li>
 </ul>
 <hr style="width: 100%; height: 2px;">
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on 10/10/2023;&nbsp;&nbsp;&nbsp;
+	Last updated on 11/09/2023;&nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
