--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Bios</span>
     </li>
     <ul>
 		<li>
-            <small><u>Routing Algorithm in Opportunities Networks with Malicious Behaviors
+            <small><u>Routing Algorithm in Opportunistic Networks with Malicious Behaviors
             </u><br>
                 <em>Startup Fund of Hainan University</em> <br>
                 Duration: Jan. 2023 to Dec. 2027, Project Number: KYQD(ZR)23058 <br>
