--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@ Bios</span>
 <p><span style="font-weight: bold; font-size: 18px;">Publications</span></p>
 <ul class="style5">
     <li>
-        <small><a>
+        <small><a href="https://ieeexplore.ieee.org/document/10475922">
 		[ICPADS'23]AoI-Sensitive Relay-Assisted Data Collection via Multi-UAV in the Large-Scale Disaster Area</a>, <br>
         Zezhi Zeng, <strong>Yang Gao*</strong><br>
-        <em>IEEE International Conference on Parallel and Distributed Systems (ICPADS)</em>, 2023.(Accepted)
+        <em>IEEE International Conference on Parallel and Distributed Systems (ICPADS)</em>, 2023.
 		(Full, Acceptance rate: 19.44%)(CCF-C)
         </small>
     </li>
