--- a/index.html
+++ b/index.html
@@ -142,15 +142,26 @@ Bios</span>
 <span style="font-weight: bold; font-size: 18px;">Teaching</span>
 <ul class="style5">
     <li>
-        <small>Game Theory, Fall 2023</small>
+        <small>Game Theory, Fall 2023, Fall 2024</small>
     </li>
     <li>
-        <small>Network Security Situation Awareness, Spring 2023</small>
+        <small>Network Security Situation Awareness, Spring 2023, Spring 2024, Fall 2024</small>
+    </li>
+    <li>
+        <small>Electric Circuit Analysis, Singnal & System, Spring 2024</small>
     </li>
 </ul>
 <hr>
 <p><span style="font-weight: bold; font-size: 18px;">Publications</span></p>
 <ul class="style5">
+     <li>
+        <small><a href="https://ieeexplore.ieee.org/document/10804045">
+		[TDSC'24]Efficient Privacy-Preserving Routing in OppNets With Probability Model and Discrete Optimization</a>, <br>
+        <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Rujie Chen<br>
+        <em>IEEE Transactions on Dependable and Secure Computing(Early Access) (TDSC)</em>, 2024.
+		(Early Access)(CCF-A)
+        </small>
+    </li>
     <li>
         <small><a href="https://ieeexplore.ieee.org/document/10475922">
 		[ICPADS'23]AoI-Sensitive Relay-Assisted Data Collection via Multi-UAV in the Large-Scale Disaster Area</a>, <br>
