--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Bios</span>
         <small><a href="https://ieeexplore.ieee.org/document/10804045">
 		[TDSC'24]Efficient Privacy-Preserving Routing in OppNets With Probability Model and Discrete Optimization</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Rujie Chen<br>
-        <em>IEEE Transactions on Dependable and Secure Computing(Early Access) (TDSC)</em>, 2024.
+        <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, 2024.
 		(Early Access)(CCF-A)
         </small>
     </li>
