--- a/index.html
+++ b/index.html
@@ -273,16 +273,16 @@ Bios</span>
         <small>Master Students</small>
         <ul> 
             <li>
-                <small><a>Zezhi Zeng, 2nd year</a> </small>
+                <small><a>Zezhi Zeng, 3rd year</a> </small>
             </li>
             <li>
-                <small><a>Yunfei Fan, 2nd year</a></small>
+                <small><a>Yunfei Fan, 3rd year</a></small>
             </li>
             <li>
-                <small><a>Zhengwu Yang, 1st year</a></small>
+                <small><a>Zhengwu Yang, 2nd year</a></small>
             </li>
    	    <li>
-                <small><a>Qingqun Liang, 1st year</a></small>
+                <small><a>Qingqun Liang, 2nd year</a></small>
             </li>
         </ul>
     </li>
@@ -290,7 +290,7 @@ Bios</span>
 <hr style="width: 100%; height: 2px;">
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on 11/09/2023;&nbsp;&nbsp;&nbsp;
+	Last updated on December 17 2024 &nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
