--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ Bios</span>
 		[ICPADS'23]AoI-Sensitive Relay-Assisted Data Collection via Multi-UAV in the Large-Scale Disaster Area</a>, <br>
         Zezhi Zeng, <strong>Yang Gao*</strong><br>
         <em>IEEE International Conference on Parallel and Distributed Systems (ICPADS)</em>, 2023.
-		(Full, Acceptance rate: 19.44%)(CCF-C)
+		(Acceptance rate: 19.44%)(CCF-C)
         </small>
     </li>
     <li>
@@ -175,7 +175,7 @@ Bios</span>
 		[MASS'21]Analytical Optimal Solution of Selfish Node Detection with 2-hop Constraints in OppNets</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Zuyan Wang, Wenqiang Li, Guang Cheng<br>
         <em>IEEE International Conference on Mobile Ad Hoc and Smart Systems (MASS)</em>, 2021.
-		(Full, Acceptance rate: 28.3%)(CCF-C)
+		(Acceptance rate: 28.3%)(CCF-C)
         </small>
     </li>
     <li>
