--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@ Bios</span>
         <small><strong>Principal Investigator</strong></small><br>
     </li>
 -->
-    <ul>
-		<li>
-            <small><u>Routing Algorithm in Opportunistic Networks with Malicious Behaviors
-            </u><br>
-                <em>Startup Fund of Hainan University</em> <br>
-                Duration: Jan. 2023 to Dec. 2027, Project Number: KYQD(ZR)23058 <br>
-            </small>
-        </li>
-		<li>
-            <small><u>Research on Key Technologies of Selfishness Routing in Vehicle Network
-            </u><br>
-                <em>Postgraduate Research and Practice Innovation Program of Jiangsu Province</em> <br>
-                Duration: Jan. 2018 to Dec. 2019, Project Number: KYCX180103 <br>
-            </small>
-        </li>
-    </ul>
+
+<li>
+    <small><u>Routing Algorithm in Opportunistic Networks with Malicious Behaviors
+    </u><br>
+	<em>Startup Fund of Hainan University</em> <br>
+	Duration: Jan. 2023 to Dec. 2027, Project Number: KYQD(ZR)23058 <br>
+    </small>
+</li>
+	<li>
+    <small><u>Research on Key Technologies of Selfishness Routing in Vehicle Network
+    </u><br>
+	<em>Postgraduate Research and Practice Innovation Program of Jiangsu Province</em> <br>
+	Duration: Jan. 2018 to Dec. 2019, Project Number: KYCX180103 <br>
+    </small>
+</li>
+
 <!--
     <li>
         <small><strong>Participant</strong></small><br>
@@ -273,22 +273,17 @@ Bios</span>
 <hr>
 <span style="font-weight: bold; font-size: 18px;">Current Students</span>
 <ul class="style5">
-	<li>
-        <small>Master Students</small>
-        <ul> 
-            <li>
-                <small><a>Zezhi Zeng, 3rd year</a> </small>
-            </li>
-            <li>
-                <small><a>Yunfei Fan, 3rd year</a></small>
-            </li>
-            <li>
-                <small><a>Zhengwu Yang, 2nd year</a></small>
-            </li>
-   	    <li>
-                <small><a>Qingqun Liang, 2nd year</a></small>
-            </li>
-        </ul>
+    <li>
+	<small><a>Zezhi Zeng, 3rd year Master Students</a> </small>
+    </li>
+    <li>
+	<small><a>Yunfei Fan, 3rd year Master Students</a></small>
+    </li>
+    <li>
+	<small><a>Zhengwu Yang, 2nd year Master Students</a></small>
+    </li>
+    <li>
+	<small><a>Qingqun Liang, 2nd year Master Students</a></small>
     </li>
 </ul>
 <hr style="width: 100%; height: 2px;">
