--- a/index.html
+++ b/index.html
@@ -274,22 +274,22 @@ Bios</span>
 <span style="font-weight: bold; font-size: 18px;">Current Students</span>
 <ul class="style5">
     <li>
-	<small><a>Zezhi Zeng, 3rd year Master Students</a> </small>
+	<small><a>Zezhi Zeng, 3rd year Master Student</a> </small>
     </li>
     <li>
-	<small><a>Yunfei Fan, 3rd year Master Students</a></small>
+	<small><a>Yunfei Fan, 3rd year Master Student</a></small>
     </li>
     <li>
-	<small><a>Zhengwu Yang, 2nd year Master Students</a></small>
+	<small><a>Zhengwu Yang, 2nd year Master Student</a></small>
     </li>
     <li>
-	<small><a>Qingqun Liang, 2nd year Master Students</a></small>
+	<small><a>Qingqun Liang, 2nd year Master Student</a></small>
     </li>
 </ul>
 <hr style="width: 100%; height: 2px;">
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on December 17 2024 &nbsp;&nbsp;&nbsp;
+	Last updated on December 23 2024 &nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
