--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <tr>
                     <td style="width: 70%; vertical-align: top;">
                         <p>Lecturer<br>
-                            <a href="https://hd.hainanu.edu.cn/scscs/">
-							School of Cyberspace Security</a><br>
+                            <!-- <a href="https://hd.hainanu.edu.cn/scscs/"> -->
+							School of Cyberspace Security
+	    		    <!-- </a> -->
+			    <br>
                             <a href="https://www.hainanu.edu.cn/">
 							Hainan University</a><br>
                             58 Renmin Avenue, Haikou, China 570228<br>
