--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Bios</span>
 	Master in Software Engineering, 2013 - 2015
 	</li>
 	<li><strong>Nanjing Agricultural University</strong><br>
-	Bachelor in Electronic Information Science and Technology, 2008 - 2012
+	Bachelor in Electronic Information, 2008 - 2012
 	</li>
 	</small>
 </ul>
