--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@ Bios</span>
 <p><span style="font-weight: bold; font-size: 18px;">Publications</span></p>
 <ul class="style5">
      <li>
+	<small><a href="https://ieeexplore.ieee.org/document/10855519">
+		[TNSM'25]Analytical Scheduling for Selfishness Detection in OppNets Based on Differential Game</a>, <br>
+	<strong>Yang Gao*</strong>, Jun Tao, Zuyan Wang, Yifan Xu<br>
+	<em> IEEE Transactions on Network and Service Management (TNSM)</em>, 2025.
+		(Early Access)(CCF-C)
+	</small>
+     </li>
+     <li>
         <small><a href="https://ieeexplore.ieee.org/document/10804045">
 		[TDSC'24]Efficient Privacy-Preserving Routing in OppNets With Probability Model and Discrete Optimization</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Rujie Chen<br>
