--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ Bios</span>
 	<small><a href="https://ieeexplore.ieee.org/document/10855519">
 		[TNSM'25]Analytical Scheduling for Selfishness Detection in OppNets Based on Differential Game</a>, <br>
 	<strong>Yang Gao*</strong>, Jun Tao, Zuyan Wang, Yifan Xu<br>
-	<em> IEEE Transactions on Network and Service Management (TNSM)</em>, 2025.
-		(Early Access)(CCF-C)
+	<em>IEEE Transactions on Network and Service Management (TNSM)</em>, 2025.
+		(Early Access)(JCR Q1, 中科院二区, CCF-C)
 	</small>
      </li>
      <li>
@@ -197,7 +197,7 @@ Bios</span>
 		[TCSS'21]CEBD: Contact Evidence-driven Blackhole Detection based on Machine Learning in OppNets</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Zuyan Wang, Weice Sun, Guang Cheng<br>
         <em>IEEE Transactions on Computational Social Systems (TCSS)</em>, 2021.
-		(CCF-C)
+		(JCR Q1, 中科院二区, CCF-C)
         </small>
     </li>
     <li>
