--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Bios</span>
         <small>Network Security Situation Awareness, Spring 2023, Spring 2024, Fall 2024</small>
     </li>
     <li>
-        <small>Electric Circuit Analysis, Singnal & System, Spring 2024</small>
+        <small>Electric Circuit Analysis, Singnal & System, Spring 2024, Spring 2025</small>
     </li>
 </ul>
 <hr>
@@ -297,8 +297,8 @@ Bios</span>
 	<small><a>Qingqun Liang, 2nd year Master Student</a></small>
     </li>
 </ul>
-.-->
 <hr style="width: 100%; height: 2px;">
+.-->
 <div style="text-align: center; font-size: 18px;">
     <small>
 	Last updated on December 23 2024 &nbsp;&nbsp;&nbsp;
