--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Bios</span>
     <small>
     Yang Gao received the Ph.D. degree from Southeast University, Nanjing, China, in 2022.
 	He is currently working with the School of Cyberspace Security, Hainan University, Haikou, China.
-	His research interests include Opportunistic Networks, Selfish Behaviors, Mobi1e Computing and Internet of Things.
+	His research interests include Opportunistic Networks, Selfish Behaviors, Mobile Edge Computing and Internet of Things.
 	</small>
 </ul>
 <hr>
@@ -301,7 +301,7 @@ Bios</span>
 .-->
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on December 23 2024 &nbsp;&nbsp;&nbsp;
+	Last updated on March 14 2025 &nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
