--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ Bios</span>
     </li>
 </ul>
 <hr>
-<p><span style="font-weight: bold; font-size: 18px;">Publications</span></p>
+<p><span style="font-weight: bold; font-size: 18px;">Publications(<a href="full_publication_list.txt">full</a>)</span></p>
 <ul class="style5">
      <li>
 	<small><a href="https://ieeexplore.ieee.org/document/10855519">
 		[TNSM'25]Analytical Scheduling for Selfishness Detection in OppNets Based on Differential Game</a>, <br>
 	<strong>Yang Gao*</strong>, Jun Tao, Zuyan Wang, Yifan Xu<br>
 	<em>IEEE Transactions on Network and Service Management (TNSM)</em>, 2025.
-		(Early Access)(JCR Q1, 中科院二区, CCF-C)
+		(JCR Q1, <strong>中科院二区</strong>)
 	</small>
      </li>
      <li>
@@ -173,7 +173,7 @@ Bios</span>
 		[TDSC'24]Efficient Privacy-Preserving Routing in OppNets With Probability Model and Discrete Optimization</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Rujie Chen<br>
         <em>IEEE Transactions on Dependable and Secure Computing (TDSC)</em>, 2024.
-		(Early Access)(CCF-A)
+		(<strong>CCF-A</strong>)
         </small>
     </li>
     <li>
@@ -197,7 +197,7 @@ Bios</span>
 		[TCSS'21]CEBD: Contact Evidence-driven Blackhole Detection based on Machine Learning in OppNets</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Yifan Xu, Zuyan Wang, Weice Sun, Guang Cheng<br>
         <em>IEEE Transactions on Computational Social Systems (TCSS)</em>, 2021.
-		(JCR Q1, 中科院二区, CCF-C)
+		(JCR Q1, <strong>中科院二区</strong>)
         </small>
     </li>
     <li>
@@ -212,7 +212,7 @@ Bios</span>
 		[ICME'19]User Profiling with Campus Wi-Fi Access Trace and Network Traffic</a>, <br>
         <strong>Yang Gao</strong>, Jun Tao*, Li Zeng, Xiaoming Fang, Qian Fang, Xiaoyan Li<br>
         <em>IEEE International Conference on Multimedia and Expo (ICME)</em>, 2019.
-		(CCF-B)
+		(<strong>CCF-B</strong>)
         </small>
     </li>
     <li>
@@ -301,7 +301,7 @@ Bios</span>
 .-->
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on March 14 2025 &nbsp;&nbsp;&nbsp;
+	Last updated on April 17 2025 &nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
