--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Bios</span>
     </li>
 </ul>
 <hr>
-<p><span style="font-weight: bold; font-size: 18px;">Publications(<a href="full_publication_list.txt">full</a>)</span></p>
+<p><span style="font-weight: bold; font-size: 18px;">Publications(<a href="full_publication_list.txt">full list</a>, <a href="https://dblp.org/pid/89/4402-33.html">dblp</a>)</span></p>
 <ul class="style5">
      <li>
 	<small><a href="https://ieeexplore.ieee.org/document/10855519">
