--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h2 style="text-align: left;">
                 <small>
                     <small>Yang Gao
+					<a href="https://orcid.org/0000-0001-5862-0411"><img src="orcid.logo.icon.svg" alt="orcid" width="15" height="15"></a>
                     </small>
                 </small>
             </h2>
