--- a/index.html
+++ b/index.html
@@ -161,14 +161,22 @@ Bios</span>
 <hr>
 <p><span style="font-weight: bold; font-size: 18px;">Selected Papers (<a href="full_publication_list.txt">More</a>, <a href="https://dblp.org/pid/89/4402-33.html">Dblp</a>, <a href="https://www.researchgate.net/profile/Yang-Gao-99?ev=hdr_xprf">ResearchGate</a>)</span></p>
 <ul class="style5">
-     <li>
+	<li>
+	<small><a>
+		[TSC'25]Improving User QoE via Joint Trajectory and Resource Optimization in Multi-UAV Assisted MEC</a>, <br>
+	<strong>Yang Gao*</strong>, Jun Tao, Yifan Xu, Zuyan Wang, Yu Gao, Meiling Wang<br>
+	<em>IEEE Transactions on Services Computing (TSC)</em>, 2025.
+		(accepted)(<strong>CCF-A</strong>)
+	</small>
+    </li>
+    <li>
 	<small><a href="https://ieeexplore.ieee.org/document/10855519">
 		[TNSM'25]Analytical Scheduling for Selfishness Detection in OppNets Based on Differential Game</a>, <br>
 	<strong>Yang Gao*</strong>, Jun Tao, Zuyan Wang, Yifan Xu<br>
 	<em>IEEE Transactions on Network and Service Management (TNSM)</em>, 2025.
 		(JCR Q1, <strong>中科院二区</strong>)
 	</small>
-     </li>
+    </li>
      <li>
         <small><a href="https://ieeexplore.ieee.org/document/10804045">
 		[TDSC'24]Efficient Privacy-Preserving Routing in OppNets With Probability Model and Discrete Optimization</a>, <br>
