--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@ Bios</span>
 <p><span style="font-weight: bold; font-size: 18px;">Selected Papers (<a href="full_publication_list.txt">More</a>, <a href="https://dblp.org/pid/89/4402-33.html">Dblp</a>, <a href="https://www.researchgate.net/profile/Yang-Gao-99?ev=hdr_xprf">ResearchGate</a>)</span></p>
 <ul class="style5">
 	<li>
-	<small><a>
+	<small><a href="https://ieeexplore.ieee.org/document/10994279">
 		[TSC'25]Improving User QoE via Joint Trajectory and Resource Optimization in Multi-UAV Assisted MEC</a>, <br>
 	<strong>Yang Gao*</strong>, Jun Tao, Yifan Xu, Zuyan Wang, Yu Gao, Meiling Wang<br>
 	<em>IEEE Transactions on Services Computing (TSC)</em>, 2025.
-		(accepted)(<strong>CCF-A</strong>)
+		(<strong>CCF-A</strong>)
 	</small>
     </li>
     <li>
