--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@ Bios</span>
 <!--
 <span style="font-weight: bold; font-size: 18px;">Grants</span>
 <ul class="style5">
+-->
 <!--
     <li>
         <small><strong>Principal Investigator</strong></small><br>
     </li>
 -->
-
+<!--
 <li>
     <small><u>Routing Algorithm in Opportunistic Networks with Malicious Behaviors
     </u><br>
@@ -124,23 +125,22 @@ Bios</span>
 	Duration: Jan. 2023 to Dec. 2027, Project Number: KYQD(ZR)23058 <br>
     </small>
 </li>
-	<li>
+<li>
     <small><u>Research on Key Technologies of Selfishness Routing in Vehicle Network
     </u><br>
 	<em>Postgraduate Research and Practice Innovation Program of Jiangsu Province</em> <br>
 	Duration: Jan. 2018 to Dec. 2019, Project Number: KYCX180103 <br>
     </small>
 </li>
-
+-->
 <!--
     <li>
         <small><strong>Participant</strong></small><br>
     </li>
 .-->
+<!--
 </ul>
 <hr>
--->
-<!--
 <span style="font-weight: bold; font-size: 18px;">Awards</span>
 <ul class="style5">
     <li>
@@ -148,15 +148,15 @@ Bios</span>
         </small>
     </li>
 </ul>
--->
 <hr>
+-->
 <span style="font-weight: bold; font-size: 18px;">Teaching</span>
 <ul class="style5">
     <li>
         <small>Game Theory, Fall 2023, Fall 2024, Fall 2025</small>
     </li>
     <li>
-        <small>Network Security Situation Awareness, Spring 2023, Spring 2024, Fall 2024, 2025 Fall</small>
+        <small>Network Security Situation Awareness, Spring 2023, Spring 2024, Fall 2024, Fall 2025</small>
     </li>
     <li>
         <small>Electric Circuit Analysis, Singnal & System, Spring 2024, Spring 2025</small>
@@ -314,9 +314,8 @@ Bios</span>
 .-->
 <div style="text-align: center; font-size: 18px;">
     <small>
-	Last updated on April 17 2025 &nbsp;&nbsp;&nbsp;
+	Last updated on August 30 2025 &nbsp;&nbsp;&nbsp;
     </small>
     <br>
 </div>
 </body></html>
-
